# vector-store

./: .gitignore  Cargo.toml  run-validator-with-scylla-docker  run-validator-with-scylla-unshare
api/: openapi.json
crates/benchmark/: Cargo.toml
crates/benchmark/src/: data.rs  db.rs  main.rs  vs.rs
crates/httpclient/: Cargo.toml
crates/httpclient/src/: lib.rs
crates/validator/: Cargo.toml
crates/validator-engine/src/: common.rs  lib.rs  scylla_cluster.rs
crates/validator-engine/src/tests/: ann.rs
crates/validator-tests/src/: common.rs
crates/validator-vector-store/src/: auth.rs  high_availability.rs
crates/validator/src/: db.rs  dns.rs  ip.rs  main.rs  reconnect.rs  test_case.rs  vs.rs
crates/validator/src/tests/: crud.rs  mod.rs
crates/vector-store/: Cargo.toml
crates/vector-store/benches/: pipeline.rs  simulator.rs
crates/vector-store/src/: db.rs  db_index.rs  engine.rs  httproutes.rs  invariant_key.rs  lib.rs  main.rs  monitor_indexes.rs  monitor_items.rs  node_state.rs  primary_key.rs  table.rs
crates/vector-store/src/index/: actor.rs  factory.rs  mod.rs  opensearch.rs  usearch.rs
crates/vector-store/tests/integration/: db_basic.rs  https.rs  memory_limit.rs  opensearch.rs  usearch.rs
src/: db.rs  db_index.rs  engine.rs  httproutes.rs  httpserver.rs  index.rs  lib.rs  modify_indexes.rs  monitor_indexes.rs  monitor_items.rs
src/index/: actor.rs  usearch.rs
tests/integration/: db_basic.rs  httpclient.rs  main.rs  usearch.rs
