[package]
name = "vector-search-validator"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
hickory-server.workspace = true
httpclient.workspace = true
scylla.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vector-store.workspace = true
